chore(deps): add envoyproxy protoc-gen-validator
