# domain/internal/handler/auth_handler.go
@@ -27,9 +27,9 @@ func (handler *AuthHandler) Check(ctx context.Context, in *authv1.HealthCheckReq
 
 func (handler *AuthHandler) Register(ctx context.Context, in *authv1.RegisterRequest) (*authv1.RegisterResponse, error) {
 	user := entity.UserEntity{
-		Name:     in.Name,
-		Email:    in.Email,
-		Password: in.Password,
+		Name:     in.GetName(),
+		Email:    in.GetEmail(),
+		Password: in.GetPassword(),
 	}
 	res, err := handler.Usecase.Register(ctx, &user)
 	if err != nil {
@@ -45,9 +45,10 @@ func (handler *AuthHandler) Register(ctx context.Context, in *authv1.RegisterReq
 
 func (handler *AuthHandler) Login(ctx context.Context, in *authv1.LoginRequest) (*authv1.LoginResponse, error) {
 	user := entity.UserEntity{
-		Email:    in.Email,
-		Password: in.Password,
+		Email:    in.GetEmail(),
+		Password: in.GetPassword(),
 	}
+
 	res, err := handler.Usecase.Login(ctx, &user)
 	if err != nil {
 		return nil, status.Error(codes.Unauthenticated, "Unauthorized")
